# restaurant-tycoon-2-enhancer

./: CMakeLists.txt  README.md
restaurant-tycoon-2-enhancer/: main.py
restaurant-tycoon-2-enhancer/src/: __init__.py  autofryer.py  cashier.py  menu.py
restaurant-tycoon-2-enhancer/tests/: test_autofryer.py  test_cashier.py  test_menu.py
src/: main.cpp
src/tycoon/: auto_collector.cpp  auto_collector.h  auto_upgrader.cpp  auto_upgrader.h
tests/: test_enhancer.cpp
